# MCP-FortiEDR

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
src/fortiedr_mcp/: __init__.py  server.py
src/fortiedr_mcp/api/: __init__.py  client.py
src/fortiedr_mcp/tools/: __init__.py  admin.py  audit.py  comm_control.py  events.py  exceptions.py  forensics.py  hash.py  integrations.py  inventory.py  iot.py  ip_sets.py  organizations.py  playbooks_policies.py  policies.py  sendable_entities.py  system_events.py  threat_hunting.py  threat_hunting_exclusions.py  threat_hunting_settings.py  users.py
src/fortiedr_mcp/utils/: __init__.py  config.py
tests/: test_tools.py
