[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fortiedr-mcp"
version = "1.0.0"
description = "FastMCP server that wraps the FortiEDR REST API"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.3.0",
    "aiohttp>=3.9.0",
    "pydantic-settings>=2.3.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "anyio>=4.4.0",
]

[project.scripts]
mcp-fortiedr = "fortiedr_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
